fix: align vertical zhuyin on Android

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,19 @@ body {
   padding-left: env(safe-area-inset-left, 0px);
 }
 
+@font-face {
+  font-family: "MOE EduKai Android";
+  src: url("/assets-legacy/fonts/edukai-5.1_20251208.ttf") format("truetype");
+  font-display: swap;
+  font-style: normal;
+  font-weight: 400;
+  unicode-range:
+    U+02C7, U+02CA-02CB, U+02D9, U+02EA-02EB,
+    U+0307, U+030D, U+0358,
+    U+3007, U+3105-3129, U+31A0-31BF,
+    U+3400-4DBF, U+4E00-9FFF, U+F900-FAFF, U+20000-2FA1F;
+}
+
 .sr-only {
 	position: absolute;
 	width: 1px;
@@ -448,6 +461,158 @@ body.lang-t .iconic-color { color: #744; }
   color: inherit;
   text-decoration: none;
   pointer-events: none;
+}
+
+/* Right-angle ruby preferences.  The legacy hruby CSS always lays out the
+   romanization rows; compact them when the user only asked for bopomofo. */
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle ru[annotation]::before,
+body[data-ruby-pref='none'] .result .entry .title hruby.rightangle ru[annotation]::before {
+  content: none !important;
+  display: none !important;
+}
+
+body[data-ruby-pref='pinyin'] .result .entry .title hruby.rightangle ru[zhuyin] zhuyin,
+body[data-ruby-pref='none'] .result .entry .title hruby.rightangle ru[zhuyin] zhuyin {
+  display: none !important;
+}
+
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle,
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle ru {
+  line-height: 1.55 !important;
+}
+
+body[data-ruby-pref='zhuyin'] .result .entry .title {
+  margin-bottom: 0.35em !important;
+}
+
+.result .entry .title {
+  --title-zhuyin-x-shift: 0em;
+  --title-zhuyin-y-shift: 0em;
+  font-family:
+    "MOE EduKai Android",
+    Biaodian Pro Serif CNS,
+    Numeral LF Serif,
+    MOEDICT,
+    Fira Sans OT,
+    Georgia,
+    "Times New Roman",
+    Zhuyin Kaiti,
+    TW-Kai-98_1,
+    "教育部標準楷書",
+    kai-pc,
+    CMEXc1,
+    Biaukai,
+    MOEDICT-IOS-KAI,
+    DFKaiShu-SB-Estd-BF,
+    "全字庫正楷體",
+    Kaiti TC,
+    "楷體-繁",
+    "文鼎ＰＬ新中楷",
+    "cwText 楷書",
+    cursive,
+    serif,
+    HanaMinA,
+    HanaMinB,
+    HAN NOM A,
+    HAN NOM B,
+    Han Kaiti CNS,
+    cursive,
+    serif;
+  font-weight: 400;
+}
+
+html.moe-android .result .entry .title {
+  --title-zhuyin-x-shift: 0.012em;
+  --title-zhuyin-y-shift: -0.055em;
+}
+
+.result .entry .title hruby.rightangle ru[annotation] > rt {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  border: 0 !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  clip-path: inset(50%) !important;
+  white-space: nowrap !important;
+  color: transparent !important;
+  font-size: 0 !important;
+  line-height: 0 !important;
+}
+
+.result .entry .title hruby.rightangle ru[zhuyin] zhuyin,
+.result .entry .title hruby.rightangle ru[zhuyin] yin,
+.result .entry .title hruby.rightangle ru[zhuyin] diao {
+  font-family: "MOE EduKai Android", MOEDICT, "Zhuyin Kaiti", cursive, serif !important;
+}
+
+.result .entry .title hruby.rightangle ru[zhuyin] diao {
+  right: calc(-0.42em + var(--title-zhuyin-x-shift));
+  width: 0.7em;
+}
+
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle ru[zhuyin] zhuyin,
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle ru[zhuyin][length="1"] zhuyin,
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle ru[zhuyin][length="2"] zhuyin,
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle ru[zhuyin][length="3"] zhuyin {
+  top: calc(50% + var(--title-zhuyin-y-shift)) !important;
+  right: calc(.05em + var(--title-zhuyin-x-shift)) !important;
+  margin-top: 0 !important;
+  transform: translateY(-50%) scale(.4) !important;
+  transform-origin: center center !important;
+}
+
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle ru[zhuyin][length="2"] zhuyin {
+  top: calc(50% + .19em + var(--title-zhuyin-y-shift)) !important;
+}
+
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle ru[zhuyin][length="1"] zhuyin {
+  height: 1em !important;
+  line-height: 1 !important;
+}
+
+body[data-ruby-pref='zhuyin'] .result .entry .title hruby.rightangle ru[zhuyin][length="1"] diao {
+  top: calc(50% - .60em + var(--title-zhuyin-y-shift));
+  margin-top: 0;
+}
+
+.result .entry .title hruby.rightangle ru[zhuyin][length="2"] diao {
+  top: calc(50% - 1.01em + var(--title-zhuyin-y-shift));
+  right: calc(-0.57em + var(--title-zhuyin-x-shift));
+  margin-top: 0;
+  transform: none;
+}
+
+@media (max-width: 767px) {
+  html.moe-android .result .entry .entry-item {
+    overflow: visible;
+  }
+
+  html.moe-android .result .entry .entry-item > span.part-of-speech,
+  html.moe-android .result .entry .entry-item > ol {
+    float: none;
+  }
+
+  html.moe-android .result .entry .entry-item > span.part-of-speech {
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  html.moe-android .result .entry .entry-item > ol {
+    width: auto;
+    margin: 0 0 1em;
+    padding-left: 3.1em;
+  }
+
+  html.moe-android .result .entry .entry-item > span.part-of-speech + ol {
+    margin-top: -1.45em;
+  }
+
+  html.moe-android .result .entry .entry-item > .part-of-speech ~ ol li:only-child {
+    margin: 0 0 1.5em;
+  }
 }
 
 /* 原 _strokes.scss: #strokes */
